--- a/MusicVisualisation/Assembly-CSharp.csproj
+++ b/MusicVisualisation/Assembly-CSharp.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\GenerateCubes.cs" />
      <Compile Include="Assets\Scripts\Audios.cs" />
+     <Compile Include="Assets\Scripts\GenerateSpheres.cs" />
     <Reference Include="UnityEngine">
         <HintPath>D:/UNITY/2020.3.14f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
