rotate camera and cahnge color of spheres

--- a/MusicVisualisation/Assembly-CSharp.csproj
+++ b/MusicVisualisation/Assembly-CSharp.csproj
@@ -37,8 +37,9 @@
   </PropertyGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\GenerateCubes.cs" />
-     <Compile Include="Assets\Scripts\Audios.cs" />
      <Compile Include="Assets\Scripts\GenerateSpheres.cs" />
+     <Compile Include="Assets\Scripts\Audios.cs" />
+     <Compile Include="Assets\Scripts\RotateCamera.cs" />
     <Reference Include="UnityEngine">
         <HintPath>D:/UNITY/2020.3.14f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
